[package]
name = "rust_compile_speed_in_docker"
version = "1.0.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[dependencies]
adler32 = {version = "1.0.3"}
aho-corasick = {version = "0.7.3"}
ansi_term = {version = "0.11.0"}
antidote = {version = "1.0.0"}
approx = {version = "0.3.2"}
arc-swap = {version = "0.3.11"}
arrayref = {version = "0.3.5"}
arrayvec = {version = "0.4.10"}
ascii = {version = "0.9.1"}
atty = {version = "0.2.11"}
autocfg = {version = "0.1.2"}
backtrace = {version = "0.3.18"}
backtrace-sys = {version = "0.1.28"}
base64 = {version = "0.10.1"}
bincode = {version = "1.1.4"}
bit-set = {version = "0.5.1"}
bit-vec = {version = "0.6.0"}
bitflags = {version = "1.0.4"}
blake2-rfc = {version = "0.2.18"}
block-buffer = {version = "0.7.3"}
block-padding = {version = "0.1.4"}
bufstream = {version = "0.1.4"}
build_const = {version = "0.2.1"}
byte-tools = {version = "0.3.1"}
byteorder = {version = "1.3.1"}
bytes = {version = "0.4.12"}
cargo_metadata = {version = "0.7.4"}
cc = {version = "1.0.37"}
cfg-if = {version = "0.1.9"}
chrono = {version = "0.4.6"}
clap = {version = "2.33.0"}
cloudabi = {version = "0.0.3"}
cmake = {version = "0.1.40"}
colored = {version = "1.8.0"}
combine = {version = "4.0.0-alpha.1"}
compiletest_rs = {version = "0.3.22"}
constant_time_eq = {version = "0.1.3"}
cookie = {version = "0.12.0"}
core-foundation = {version = "0.6.4"}
core-foundation-sys = {version = "0.6.2"}
crc = {version = "1.8.1"}
crc32fast = {version = "1.2.0"}
crossbeam = {version = "0.7.1"}
crossbeam-channel = {version = "0.3.8"}
crossbeam-deque = {version = "0.7.1"}
crossbeam-epoch = {version = "0.7.1"}
crossbeam-queue = {version = "0.1.2"}
crossbeam-utils = {version = "0.6.5"}
crypto-mac = {version = "0.7.0"}
csv = {version = "1.0.7"}
csv-core = {version = "0.1.5"}
curl = {version = "0.4.21"}
curl-sys = {version = "0.4.18"}
data-encoding = {version = "2.1.2"}
diff = {version = "0.1.11"}
difference = {version = "2.0.0"}
digest = {version = "0.8.0"}
dirs = {version = "1.0.5"}
docopt = {version = "1.1.0"}
dtoa = {version = "0.4.4"}
either = {version = "1.5.2"}
encoding = {version = "0.2.33"}
encoding-index-japanese = {version = "1.20141219.5"}
encoding-index-korean = {version = "1.20141219.5"}
encoding-index-simpchinese = {version = "1.20141219.5"}
encoding-index-singlebyte = {version = "1.20141219.5"}
encoding-index-tradchinese = {version = "1.20141219.5"}
encoding_index_tests = {version = "0.1.4"}
encoding_rs = {version = "0.8.17"}
env_logger = {version = "0.6.1"}
errno = {version = "0.2.4"}
error-chain = {version = "0.12.1"}
failure = {version = "0.1.5"}
failure_derive = {version = "0.1.5"}
fake-simd = {version = "0.1.2"}
filetime = {version = "0.2.6"}
fixedbitset = {version = "0.1.9"}
flate2 = {version = "1.0.7"}
fnv = {version = "1.0.6"}
foreign-types = {version = "0.4.0"}
foreign-types-shared = {version = "0.2.0"}
fuchsia-cprng = {version = "0.1.1"}
fuchsia-zircon = {version = "0.3.3"}
fuchsia-zircon-sys = {version = "0.3.3"}
futures = {version = "0.1.27"}
futures-cpupool = {version = "0.1.8"}
gcc = {version = "0.3.55"}
generic-array = {version = "0.13.0"}
getopts = {version = "0.2.19"}
git2 = {version = "0.8.0"}
glob = {version = "0.3.0"}
globset = {version = "0.4.3"}
h2 = {version = "0.1.20"}
handlebars = {version = "2.0.0-beta.2"}
hashbrown = {version = "0.3.0"}
heck = {version = "0.3.1"}
hex = {version = "0.3.2"}
hmac = {version = "0.7.0"}
hostname = {version = "0.1.5"}
http = {version = "0.1.17"}
httparse = {version = "1.3.3"}
humantime = {version = "1.2.0"}
hyper = {version = "0.12.29"}
hyper-tls = {version = "0.3.2"}
idna = {version = "0.1.5"}
indexmap = {version = "1.0.2"}
iovec = {version = "0.1.2"}
itertools = {version = "0.8.0"}
itoa = {version = "0.4.4"}
json = {version = "0.11.13"}
kernel32-sys = {version = "0.2.2"}
language-tags = {version = "0.2.2"}
lazy_static = {version = "1.3.0"}
lazycell = {version = "1.2.1"}
libc = {version = "0.2.55"}
libflate = {version = "0.1.22"}
libgit2-sys = {version = "0.7.11"}
libloading = {version = "0.5.0"}
libz-sys = {version = "1.0.25"}
linked-hash-map = {version = "0.5.2"}
lock_api = {version = "0.2.0"}
log = {version = "0.4.6"}
lru-cache = {version = "0.1.2"}
maplit = {version = "1.0.1"}
matches = {version = "0.1.8"}
md5 = {version = "0.6.1"}
memchr = {version = "2.2.0"}
memmap = {version = "0.7.0"}
memoffset = {version = "0.3.0"}
metadeps = {version = "1.1.2"}
mime = {version = "0.3.13"}
mime_guess = {version = "2.0.0-alpha.6"}
miniz-sys = {version = "0.1.12"}
miniz_oxide = {version = "0.2.1"}
miniz_oxide_c_api = {version = "0.2.1"}
mio = {version = "0.6.17"}
mio-uds = {version = "0.6.7"}
miow = {version = "0.3.3"}
native-tls = {version = "0.2.3"}
net2 = {version = "0.2.33"}
nix = {version = "0.13.0"}
nodrop = {version = "0.1.13"}
nom = {version = "5.0.0-beta1"}
num = {version = "0.2.0"}
num-bigint = {version = "0.2.2"}
num-complex = {version = "0.2.1"}
num-derive = {version = "0.2.5"}
num-integer = {version = "0.1.39"}
num-iter = {version = "0.1.37"}
num-rational = {version = "0.2.1"}
num-traits = {version = "0.2.6"}
num_cpus = {version = "1.10.0"}
opaque-debug = {version = "0.2.2"}
openssl = {version = "0.10.22"}
openssl-probe = {version = "0.1.2"}
openssl-sys = {version = "0.9.46"}
ordered-float = {version = "1.0.2"}
ordermap = {version = "0.4.2"}
owning_ref = {version = "0.4.0"}
parking_lot = {version = "0.8.0"}
parking_lot_core = {version = "0.5.0"}
percent-encoding = {version = "1.0.1"}
pest = {version = "2.1.1"}
pest_derive = {version = "2.1.0"}
pest_meta = {version = "2.1.1"}
petgraph = {version = "0.4.13"}
phf = {version = "0.7.24"}
phf_codegen = {version = "0.7.24"}
phf_generator = {version = "0.7.24"}
phf_shared = {version = "0.7.24"}
pkg-config = {version = "0.3.14"}
pretty_assertions = {version = "0.6.1"}
proc-macro2 = {version = "0.4.30"}
proptest = {version = "0.9.3"}
protobuf = {version = "2.5.0"}
pulldown-cmark = {version = "0.5.1"}
quick-error = {version = "1.2.2"}
quickcheck = {version = "0.8.3"}
quote = {version = "0.6.12"}
rand = {version = "0.6.5"}
rand_chacha = {version = "0.1.1"}
rand_core = {version = "0.4.0"}
rand_hc = {version = "0.1.0"}
rand_isaac = {version = "0.1.1"}
rand_jitter = {version = "0.1.4"}
rand_os = {version = "0.1.3"}
rand_pcg = {version = "0.1.2"}
rand_xorshift = {version = "0.1.1"}
rayon = {version = "1.0.3"}
rayon-core = {version = "1.4.1"}
rdrand = {version = "0.5.0"}
redox_syscall = {version = "0.1.54"}
redox_termios = {version = "0.1.1"}
regex = {version = "1.1.6"}
regex-syntax = {version = "0.6.6"}
remove_dir_all = {version = "0.5.1"}
reqwest = {version = "0.9.17"}
ring = {version = "0.14.6"}
rust-crypto = {version = "0.2.36"}
rustc-demangle = {version = "0.1.14"}
rustc-serialize = {version = "0.3.24"}
rustc_version = {version = "0.2.3"}
rustfix = {version = "0.4.5"}
ryu = {version = "0.2.8"}
safemem = {version = "0.3.0"}
same-file = {version = "1.0.4"}
schannel = {version = "0.1.15"}
scoped-tls = {version = "1.0.0"}
scoped_threadpool = {version = "0.1.9"}
scopeguard = {version = "1.0.0"}
semver = {version = "0.9.0"}
semver-parser = {version = "0.9.0"}
serde = {version = "1.0.91"}
serde_bytes = {version = "0.11.1"}
serde_derive = {version = "1.0.91"}
serde_json = {version = "1.0.39"}
serde_test = {version = "1.0.91"}
serde_urlencoded = {version = "0.5.5"}
serde_yaml = {version = "0.8.9"}
sha-1 = {version = "0.8.1"}
sha1 = {version = "0.6.0"}
sha2 = {version = "0.8.0"}
signal-hook = {version = "0.1.9"}
siphasher = {version = "0.3.0"}
slab = {version = "0.4.2"}
smallvec = {version = "0.6.9"}
socket2 = {version = "0.3.9"}
spin = {version = "0.5.0"}
stable_deref_trait = {version = "1.1.1"}
string = {version = "0.2.0"}
strsim = {version = "0.9.2"}
structopt = {version = "0.2.15"}
structopt-derive = {version = "0.2.15"}
syn = {version = "0.15.34"}
synom = {version = "0.11.3"}
synstructure = {version = "0.10.2"}
tar = {version = "0.4.26"}
tempdir = {version = "0.3.7"}
tempfile = {version = "3.0.7"}
term = {version = "0.5.2"}
termcolor = {version = "1.0.4"}
termion = {version = "1.5.2"}
textwrap = {version = "0.11.0"}
thread-id = {version = "3.3.0"}
thread_local = {version = "0.3.6"}
threadpool = {version = "1.7.1"}
time = {version = "0.1.42"}
tokio = {version = "0.1.20"}
tokio-codec = {version = "0.1.1"}
tokio-core = {version = "0.1.17"}
tokio-current-thread = {version = "0.1.6"}
tokio-executor = {version = "0.1.7"}
tokio-fs = {version = "0.1.6"}
tokio-io = {version = "0.1.12"}
tokio-reactor = {version = "0.1.9"}
tokio-signal = {version = "0.2.7"}
tokio-sync = {version = "0.1.5"}
tokio-tcp = {version = "0.1.3"}
tokio-threadpool = {version = "0.1.14"}
tokio-timer = {version = "0.2.11"}
tokio-trace-core = {version = "0.2.0"}
tokio-udp = {version = "0.1.3"}
tokio-uds = {version = "0.2.5"}
toml = {version = "0.5.1"}
traitobject = {version = "0.1.0"}
trust-dns-proto = {version = "0.7.3"}
try-lock = {version = "0.2.2"}
try_from = {version = "0.3.2"}
typeable = {version = "0.1.2"}
typenum = {version = "1.10.0"}
ucd-util = {version = "0.1.3"}
unicase = {version = "2.4.0"}
unicode-bidi = {version = "0.3.4"}
unicode-normalization = {version = "0.1.8"}
unicode-segmentation = {version = "1.3.0"}
unicode-width = {version = "0.1.5"}
unicode-xid = {version = "0.1.0"}
unreachable = {version = "1.0.0"}
untrusted = {version = "0.6.2"}
url = {version = "1.7.2"}
url_serde = {version = "0.2.0"}
utf8-ranges = {version = "1.0.2"}
uuid = {version = "0.7.4"}
vcpkg = {version = "0.2.6"}
vec_map = {version = "0.8.1"}
version_check = {version = "0.1.5"}
void = {version = "1.0.2"}
walkdir = {version = "2.2.7"}
want = {version = "0.2.0"}
which = {version = "2.0.1"}
winapi = {version = "0.3.7"}
winapi-build = {version = "0.1.1"}
winapi-i686-pc-windows-gnu = {version = "0.4.0"}
winapi-util = {version = "0.1.2"}
winapi-x86_64-pc-windows-gnu = {version = "0.4.0"}
wincolor = {version = "1.0.1"}
ws2_32-sys = {version = "0.2.1"}
xattr = {version = "0.2.2"}
xml-rs = {version = "0.8.0"}
yaml-rust = {version = "0.4.3"}
