[package]
name = "rust_compile_speed_in_docker"
version = "1.0.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[dependencies]
aho-corasick = {version = "0.7.3"}
ansi_term = {version = "0.11.0"}
arrayvec = {version = "0.4.10"}
atty = {version = "0.2.11"}
autocfg = {version = "0.1.2"}
backtrace = {version = "0.3.18"}
base64 = {version = "0.10.1"}
bitflags = {version = "1.0.4"}
byteorder = {version = "1.3.1"}
bytes = {version = "0.4.12"}
cc = {version = "1.0.37"}
cfg-if = {version = "0.1.9"}
chrono = {version = "0.4.6"}
clap = {version = "2.33.0"}
either = {version = "1.5.2"}
env_logger = {version = "0.6.1"}
error-chain = {version = "0.12.1"}
failure = {version = "0.1.5"}
failure_derive = {version = "0.1.5"}
fnv = {version = "1.0.6"}
futures = {version = "0.1.27"}
humantime = {version = "1.2.0"}
hyper = {version = "0.12.29"}
idna = {version = "0.1.5"}
iovec = {version = "0.1.2"}
itertools = {version = "0.8.0"}
itoa = {version = "0.4.4"}
lazy_static = {version = "1.3.0"}
lazycell = {version = "1.2.1"}
libc = {version = "0.2.55"}
lock_api = {version = "0.2.0"}
log = {version = "0.4.6"}
matches = {version = "0.1.8"}
memchr = {version = "2.2.0"}
memoffset = {version = "0.3.0"}
mio = {version = "0.6.17"}
net2 = {version = "0.2.33"}
nodrop = {version = "0.1.13"}
num_cpus = {version = "1.10.0"}
openssl = {version = "0.10.22"}
owning_ref = {version = "0.4.0"}
parking_lot = {version = "0.8.0"}
percent-encoding = {version = "1.0.1"}
pkg-config = {version = "0.3.14"}
proc-macro2 = {version = "0.4.30"}
quick-error = {version = "1.2.2"}
quote = {version = "0.6.12"}
rand = {version = "0.6.5"}
regex = {version = "1.1.6"}
regex-syntax = {version = "0.6.6"}
rustc-demangle = {version = "0.1.14"}
rustc_version = {version = "0.2.3"}
ryu = {version = "0.2.8"}
scopeguard = {version = "1.0.0"}
semver = {version = "0.9.0"}
semver-parser = {version = "0.9.0"}
serde = {version = "1.0.91"}
serde_derive = {version = "1.0.91"}
serde_json = {version = "1.0.39"}
slab = {version = "0.4.2"}
smallvec = {version = "0.6.9"}
stable_deref_trait = {version = "1.1.1"}
strsim = {version = "0.9.2"}
syn = {version = "0.15.34"}
synstructure = {version = "0.10.2"}
termcolor = {version = "1.0.4"}
textwrap = {version = "0.11.0"}
thread_local = {version = "0.3.6"}
time = {version = "0.1.42"}
tokio = {version = "0.1.20"}
toml = {version = "0.5.1"}
ucd-util = {version = "0.1.3"}
unicase = {version = "2.4.0"}
url = {version = "1.7.2"}
utf8-ranges = {version = "1.0.2"}
uuid = {version = "0.7.4"}
vec_map = {version = "0.8.1"}
version_check = {version = "0.1.5"}
winapi = {version = "0.3.7"}
