[package]
name = "rust_compile_speed_in_docker"
version = "1.0.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[dependencies]
aho-corasick = {version = "0.7.3"}
arrayvec = {version = "0.4.10"}
atty = {version = "0.2.11"}
autocfg = {version = "0.1.2"}
backtrace = {version = "0.3.18"}
base64 = {version = "0.10.1"}
bitflags = {version = "1.0.4"}
byteorder = {version = "1.3.1"}
cc = {version = "1.0.37"}
cfg-if = {version = "0.1.9"}
either = {version = "1.5.2"}
env_logger = {version = "0.6.1"}
error-chain = {version = "0.12.1"}
itoa = {version = "0.4.4"}
lazy_static = {version = "1.3.0"}
lazycell = {version = "1.2.1"}
libc = {version = "0.2.55"}
log = {version = "0.4.6"}
memchr = {version = "2.2.0"}
nodrop = {version = "0.1.13"}
num_cpus = {version = "1.10.0"}
parking_lot = {version = "0.8.0"}
proc-macro2 = {version = "0.4.30"}
quote = {version = "0.6.12"}
rand = {version = "0.6.5"}
regex = {version = "1.1.6"}
rustc-demangle = {version = "0.1.14"}
rustc_version = {version = "0.2.3"}
ryu = {version = "0.2.8"}
scopeguard = {version = "1.0.0"}
semver = {version = "0.9.0"}
semver-parser = {version = "0.9.0"}
serde = {version = "1.0.91"}
serde_derive = {version = "1.0.91"}
serde_json = {version = "1.0.39"}
slab = {version = "0.4.2"}
smallvec = {version = "0.6.9"}
strsim = {version = "0.9.2"}
syn = {version = "0.15.34"}
thread_local = {version = "0.3.6"}
time = {version = "0.1.42"}
toml = {version = "0.5.1"}
ucd-util = {version = "0.1.3"}
unicase = {version = "2.4.0"}
utf8-ranges = {version = "1.0.2"}
winapi = {version = "0.3.7"}
